2011-12-18 Ingo Pfennigstorf  <i.pfennigstorf@gmail.com>
	* initial Code of the new Extension
	* Added Icon